--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+*.pdb
+*.suo
+*.user
+*.obj
+*.pch
+*.idb
+/Debug
+/ipch
+/bin/Debug
+/bin/Release
+/lib/Debug
+/lib/Release
+/temp/Debug
+/temp/Release
