--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="debug.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="thread.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="exports.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="debug.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="thread.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
