添加字符串消息循环类，用于异步处理入队消息

--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="exports.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="msg_loop.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="thread.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="msg_loop.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
