--- a/source/common/common.vcxproj
+++ b/source/common/common.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="exports.h" />
     <ClInclude Include="logger.h" />
+    <ClInclude Include="msg_loop.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="thread.h" />
@@ -105,6 +106,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="logger.cpp" />
+    <ClCompile Include="msg_loop.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
