--- a/source/common/common.vcxproj
+++ b/source/common/common.vcxproj
@@ -85,7 +85,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="exports.h" />
-    <ClInclude Include="logger.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="msg_loop.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -105,7 +105,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="logger.cpp" />
+    <ClCompile Include="log.cpp" />
     <ClCompile Include="msg_loop.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
