--- a/source/common/common.vcxproj
+++ b/source/common/common.vcxproj
@@ -90,7 +90,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="thread.h" />
-    <ClInclude Include="utility.h" />
+    <ClInclude Include="macros.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common.cpp" />
@@ -112,7 +112,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="thread.cpp" />
-    <ClCompile Include="utility.cpp" />
+    <ClCompile Include="macros.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
