--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="common.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="utility.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="debug.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -42,6 +39,9 @@
     <ClInclude Include="log.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="macros.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,9 +51,6 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="utility.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="debug.cpp">
@@ -66,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="log.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="macros.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
