添加命令行类 CCommand，添加函数 Ascii2Unicode

--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="macros.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="command.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="functions.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +72,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="macros.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="command.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="functions.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
