--- a/source/common/common.vcxproj
+++ b/source/common/common.vcxproj
@@ -82,9 +82,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="command.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="exports.h" />
+    <ClInclude Include="functions.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="msg_loop.h" />
     <ClInclude Include="stdafx.h" />
@@ -93,6 +95,7 @@
     <ClInclude Include="macros.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="command.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="debug.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
@@ -105,6 +108,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="functions.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="msg_loop.cpp" />
     <ClCompile Include="stdafx.cpp">
