--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="functions.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="functions.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="version.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
