添加命名空间 encode，将函数 Ascii2Unicode() 归入其中

--- a/source/common/common.vcxproj.filters
+++ b/source/common/common.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="version.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="encode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="version.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="encode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
