--- a/source/common/common.vcxproj
+++ b/source/common/common.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="command.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="debug.h" />
+    <ClInclude Include="encode.h" />
     <ClInclude Include="exports.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="log.h" />
@@ -109,6 +110,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="encode.cpp" />
     <ClCompile Include="functions.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="msg_loop.cpp" />
