修改解决方案目录结构

--- a/test/test_zlib/test_zlib.vcxproj.filters
+++ b/test/test_zlib/test_zlib.vcxproj.filters
@@ -23,5 +23,6 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="example.c" />
   </ItemGroup>
 </Project>
