--- a/test/test_rapidxml/test_rapidxml.vcxproj.filters
+++ b/test/test_rapidxml/test_rapidxml.vcxproj.filters
@@ -9,10 +9,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\test_common\stdafx.h">
+    <ClInclude Include="..\test_common\targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\test_common\targetver.h">
+    <ClInclude Include="stdafx.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -23,6 +23,5 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="minigzip.c" />
   </ItemGroup>
 </Project>
