--- a/source/network/network.vcxproj
+++ b/source/network/network.vcxproj
@@ -13,22 +13,20 @@
   <ItemGroup>
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="FindOthers.cpp" />
-    <ClCompile Include="HandleError.cpp" />
-    <ClCompile Include="MyDefine.cpp" />
-    <ClCompile Include="MySockets.cpp" />
+    <ClCompile Include="tiny_socket.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="exports.h" />
     <ClInclude Include="FindOthers.h" />
-    <ClInclude Include="HandleError.h" />
-    <ClInclude Include="MyDefine.h" />
-    <ClInclude Include="MySockets.h" />
+    <ClInclude Include="tiny_socket.h" />
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="utility.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FindOthers.def" />
