--- a/source/flash/flash.vcxproj.filters
+++ b/source/flash/flash.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="wnd_flash.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="flash_event_listener.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
