--- a/src/network/network.vcxproj
+++ b/src/network/network.vcxproj
@@ -85,10 +85,11 @@
       </ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
+      <Command>$(SolutionDir)tool\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -113,10 +114,11 @@
       </ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
+      <Command>$(SolutionDir)tool\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
