--- a/src/flash/flash.vcxproj
+++ b/src/flash/flash.vcxproj
@@ -63,10 +63,11 @@
       <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
+      <Command>$(SolutionDir)tool\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -89,10 +90,11 @@
       <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PreLinkEvent>
-      <Command>$(SolutionDir)script\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
+      <Command>$(SolutionDir)tool\copy_third_party.bat $(SolutionDir) $(Configuration) lib</Command>
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
