flash项目添加资源信息，各项目Release支持调试

--- a/src/w2x_flash/w2x_flash.vcxproj.filters
+++ b/src/w2x_flash/w2x_flash.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="wnd_flash_impl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -56,5 +59,10 @@
     <ClCompile Include="wnd_flash_impl.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="w2x_flash.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
