--- a/src/w2x_flash/w2x_flash.rc
+++ b/src/w2x_flash/w2x_flash.rc
@@ -61,8 +61,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,1,0,1
- PRODUCTVERSION 0,1,0,1
+ FILEVERSION 1,0,0,1
+ PRODUCTVERSION 1,0,0,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -77,12 +77,12 @@ BEGIN
     BEGIN
         BLOCK "080404b0"
         BEGIN
-            VALUE "FileVersion", "0.1.0.1"
-            VALUE "InternalName", "w2x_network.dll"
+            VALUE "FileVersion", "1.0.0.1"
+            VALUE "InternalName", "w2x_flash.dll"
             VALUE "LegalCopyright", "Copyright (C) 2014"
             VALUE "OriginalFilename", "w2x_network.dll"
-            VALUE "ProductName", "w2x_network"
-            VALUE "ProductVersion", "0.1.0.1"
+            VALUE "ProductName", "w2x_flash"
+            VALUE "ProductVersion", "1.0.0.1"
         END
     END
     BLOCK "VarFileInfo"
