--- a/src/w2x_flash/w2x_flash.vcxproj
+++ b/src/w2x_flash/w2x_flash.vcxproj
@@ -76,7 +76,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>Use</PrecompiledHeader>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;W2X_FLASH_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -91,6 +91,7 @@
       <ImportLibrary>$(SolutionDir)lib\$(Configuration)\$(TargetName).lib</ImportLibrary>
       <AdditionalDependencies>w2x_common.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <GenerateMapFile>true</GenerateMapFile>
     </Link>
     <PostBuildEvent>
       <Command>
@@ -105,6 +106,7 @@
     <ClInclude Include="exports.h" />
     <ClInclude Include="ext_api_xml.h" />
     <ClInclude Include="flash_event.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="wnd_flash.h" />
@@ -127,6 +129,9 @@
     </ClCompile>
     <ClCompile Include="wnd_flash.cpp" />
     <ClCompile Include="wnd_flash_impl.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="w2x_flash.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
