优化线程互斥体

--- a/src/w2x_common/w2x_common.vcxproj
+++ b/src/w2x_common/w2x_common.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="file_sys.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="msg_loop.cpp" />
+    <ClCompile Include="mutex.cpp" />
     <ClCompile Include="process.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
