--- a/src/w2x_common/w2x_common.vcxproj.filters
+++ b/src/w2x_common/w2x_common.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClCompile Include="event_listener.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mutex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="w2x_common.rc">
