增加 STL 字符串扩展类 CStringUtil

--- a/src/w2x_common/w2x_common.vcxproj.filters
+++ b/src/w2x_common/w2x_common.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="event_listener.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="string_util.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -150,6 +153,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="mutex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="string_util.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
