--- a/src/w2x_common/w2x_common.vcxproj.filters
+++ b/src/w2x_common/w2x_common.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClInclude Include="string_util.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="timer_event.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -156,6 +162,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="string_util.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="timer_event.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
